# renc

./: README.md  bayes_streamlit.py  bayesian.md  blog.md  hypthesese.md  main.py  out.csv  pyproject.toml  streamlit_app.py
data/runs/: bayes-agg-constraint-smoke2_20251220T184850Z.csv  bayes-counts-smoke_20251220T181917Z.csv  bayes-distance-one-constraint-smoke_20251220T235752Z.csv  bayes-distance-smoke_20251220T234458Z.csv  bayes-v2_20251220T182933Z.csv  (+106 more)
notebooks/: compare_distance.ipynb
raw/: internetusage.csv  rawfame.txt  readme.md  ukvisitsabroad.csv  wikipedia_eng_lng_pop.csv
runs/: 20251219T105047Z_ux-test.csv  bayes-smoke_20251220T164827Z.csv  bayes-v1_20251220T164958Z.csv  bayes-v1_20251220T165231Z.csv  bayes-v1_20251220T165250Z.csv  bayes-v1_20251220T165306Z.csv  corrected-uk-score-2_20251219T112544Z.csv  corrected-uk-score-3_20251219T113928Z.csv  fresh-no-lang_20251219T115503Z.csv  fresh-with-lang_20251219T115506Z.csv  incorrect-labels_20251219T114523Z.csv  marginal-language-factors_20251219T115715Z.csv  marginal-language-factors_20251219T115750Z.csv  name-front-test_20251219T105325Z.csv  no-lang_20251219T110925Z.csv  no-language_20251219T122838Z.csv  out_20251219T115521Z.csv  tune-language_lang-search_20251219T120522Z.csv  tune-language_multiseed-distance-200_20251219T122216Z.csv  tune-language_multiseed-distance_20251219T121203Z.csv  tuned-langauge-factors_20251219T122319Z.csv  tuned-langauge-factors_20251219T122742Z.csv  with-lang_20251219T111037Z.csv
src/: bayes_model.py  cli.py  config.py  data.py  log.py  model.py  pipeline.py  schema.py  scrap.py
(+7 files in other folders)
