[project]
name = "renc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "pymc>=5.26.1",
    "requests>=2.32.5",
    "ruff>=0.14.9",
    "scipy>=1.16.3",
    "streamlit>=1.52.2",
]
